Cart with GET /customers and GET /customers/name/{name} routed to shopping rest svc.

--- a/src/app/top-bar/top-bar.component.html
+++ b/src/app/top-bar/top-bar.component.html
@@ -1,5 +1,5 @@
 <a [routerLink]="['/']">
-  <h1>Maxwell World of Phones - where dreams are reality</h1>
+  <h1>My Store</h1>
 </a>
 
 <a [routerLink]="['/cart']" class="button fancy-button"><i class="material-icons">shopping_cart</i>Checkout</a>
