--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,25 +1,25 @@
 <h2>Products</h2>
 
-<div *ngFor="let product of products" >
+<div *ngFor="let product of products; index as productId" >
   <h3>
-    <a [title]="product.name + ' details'">
-    {{product.name}}
-  </a>
+    <a [title]="product.name + ' details'" [routerLink]="['/products', productId]">
+      {{product.name}}
+    </a>
   </h3>
 
-  <p *ngIf="product.description">
-    Description: {{product.description}}
-  </p>
+  <!--<p *ngIf="product.description">-->
+    <!--Description: {{product.description}}-->
+  <!--</p>-->
 
-  <button (click)="share(product.name)">
-    Share
-  </button>
+  <!--<button (click)="share(product.name)">-->
+    <!--Share-->
+  <!--</button>-->
 
-  <app-product-alerts 
+  <app-product-alerts
     [product] = "product"
-    (notify) = "onNotifyMaxwell(product.name)">
+    (notify) = "onNotify(product.name)">
   </app-product-alerts>
-  
+
 </div>
 <!-- 
 Copyright Google LLC. All Rights Reserved.
