adds in more rest calls

--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,4 +1,4 @@
-<h3>CART: <div *ngIf="customer.customerName.length > 0">
+<h3>CART: <div *ngIf="customer?.customerName.length > 0">
   {{customer?.customerName}} - {{customer?.customerId}}
 </div> </h3>
 
@@ -6,9 +6,9 @@
   <a routerLink="/shipping">Shipping Prices</a>
 </p>
 
-<div class="cart-item" *ngFor="let item of items">
-  <span>{{item.name}}</span>
-  <span>{{item.price | currency}}</span>
+<div class="cart-product" *ngFor="let product of products">
+  <span>{{product.name}}</span>
+  <span>{{product.price | currency}}</span>
 </div>
 
 <form [formGroup]="checkoutForm" (ngSubmit)="onSubmit(checkoutForm.value)">
@@ -25,10 +25,11 @@
     <input id="address" type="text" formControlName="address" required="required">
   </div>
   <button class="button" type="submit">Purchase</button>
-  <label for="customersDisplay">Customers:</label>
-  <div *ngIf="customers">
-    <div id="customersDisplay" *ngFor="let cust of customers">
-      {{cust.customerName}} - {{cust.customerId}}
-    </div>
-  </div>
 </form>
+
+<div style="margin-top: 20px" *ngIf="customers">
+  <label for="customersDisplay">Customers:</label>
+  <div id="customersDisplay" *ngFor="let cust of customers">
+    {{cust.customerName}} - {{cust.customerId}}
+  </div>
+</div>
