moves a few things around.

--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,4 +1,4 @@
-<h3>CART: <span *ngIf="customer?.customerName.length > 0">
+<h3 class="mt-2">CART: <span *ngIf="customer?.customerName.length > 0">
   {{customer?.customerName}} - {{customer?.customerId}}
 </span> </h3>
 
