--- a/src/app/component/product-list/product-list.component.html
+++ b/src/app/component/product-list/product-list.component.html
@@ -23,6 +23,9 @@
   </app-product-alerts>
 
 </div>
+
+{{wait | async}} {{dairy | async}}
+
 <!-- 
 Copyright Google LLC. All Rights Reserved.
 Use of this source code is governed by an MIT-style license that
