--- a/src/app/component/purchase-results/purchase-results.component.html
+++ b/src/app/component/purchase-results/purchase-results.component.html
@@ -1,3 +1,4 @@
+<h2 *ngIf="cartOrderId" class="mt-4" style="color:#22870e; font-weight:bold;">Order successfully processed!</h2>
 <div class="mt-3">
   <p><b>Cart Order ID: {{cartOrderId}}</b></p>
 </div>
