Adds zoom directive and shopping service shell.

--- a/src/app/component/product-list/product-list.component.html
+++ b/src/app/component/product-list/product-list.component.html
@@ -22,8 +22,10 @@
     <!--[product] = "product"-->
     <!--(notify) = "onNotify(product.name)">-->
   <!--</app-product-alerts>-->
-
 </div>
+
+<button (click)="observableTest()">Hit Me Baby</button>
+
 
 <!--{{wait | async}} {{dairy | async}}-->
 
