--- a/src/app/component/previous-orders/previous-orders.component.html
+++ b/src/app/component/previous-orders/previous-orders.component.html
@@ -1,7 +1,7 @@
 <div>
   <div *ngIf="cartOrders">
     <p>Customer ID : {{customerId}}</p>
-    <table class="table">
+    <table class="table-dark">
       <thead>
       <tr>
         <th scope="col">ID</th>
@@ -22,3 +22,5 @@
   </div>
 </div>
 
+Cart Orders:{{cartOrders}}
+END
