--- a/src/app/component/top-bar/top-bar.component.html
+++ b/src/app/component/top-bar/top-bar.component.html
@@ -1,11 +1,12 @@
 <a [routerLink]="['/']">
-  <h1>My Store</h1>
+  <h1>Maxwell PhoneDepot</h1>
 </a>
 
 <!--<a [routerLink]="['/catImages']">-->
 <!--  <h1>Cat Images</h1>-->
 <!--</a>-->
 
+<a [routerLink]="['/orderHistory']" class="btn btn-dark float-right"><i class="material-icons">history</i> Order History</a>
 <a [routerLink]="['/cart']" class="button fancy-button"><i class="material-icons">shopping_cart</i>Checkout</a>
 
 <!--
