--- a/src/styles.css
+++ b/src/styles.css
@@ -138,6 +138,20 @@ app-top-bar h1 {
   background-color: #EEEEEE;
 }
 
+/* Headers */
+.page-header {
+  width: 100%;
+  height: 68px;
+  background-color: #000000;
+  padding: 16px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  color: white;
+  margin: 0;
+}
+
 
 /*
 Copyright Google LLC. All Rights Reserved.
